@@ -32,5 +32,11 @@
 
 [ ] volute :att => /regex/ { ... }
 [ ] volute :att => :any { ... } (not a nil value)
+
 [ ] volute :att => [ a, b ] { ... } (a or b)
+
+[o] volute previous_value => [ val0, val1 ] { ... } (OR)
+[o] volute [ pval0, pval1 ] => value { ... } (OR)
+
+[ ] readme : list alternatives
 
