@@ -162,71 +162,6 @@ describe 'a volute for a class or an attribute' do
   end
 end
 
-describe 'transition volutes' do
-
-  before(:each) do
-
-    Volute.clear!
-
-    @package = Package.new
-    @package.vset(:location, 'NRT')
-
-    volute :location do
-      volute :any => 'SFO' do
-        object.comment = 'reached SFO'
-      end
-    end
-    volute :location do
-      volute  'NRT' => 'SFO' do
-        object.comment = 'reached SFO from NRT'
-      end
-    end
-    volute 'NRT' => 'FCO' do
-      object.comment = 'reached FCO from NRT'
-    end
-    volute 'GVA' => :any do
-      object.comment = 'left GVA'
-    end
-  end
-
-  it 'should not trigger when not specified' do
-
-    @package.location = 'ZRH'
-
-    @package.comment.should == nil
-  end
-
-  it 'should trigger for an end state' do
-
-    @package.vset(:location, 'ZRH')
-    @package.location = 'SFO'
-
-    @package.comment.should == 'reached SFO'
-  end
-
-  it 'should trigger for an attribute, a start state and an end state' do
-
-    @package.location = 'SFO'
-
-    @package.comment.should == 'reached SFO from NRT'
-  end
-
-  it 'should trigger for a start state and an end state' do
-
-    @package.location = 'FCO'
-
-    @package.comment.should == 'reached FCO from NRT'
-  end
-
-  it 'should trigger for a start state' do
-
-    @package.vset(:location, 'GVA')
-    @package.location = 'CAL'
-
-    @package.comment.should == 'left GVA'
-  end
-end
-
 describe 'a volute for a class' do
 
   before(:each) do
