@@ -9,7 +9,7 @@ Gem::Specification.new do |s|
 
   s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
   s.authors = ["John Mettraux"]
-  s.date = %q{2010-10-11}
+  s.date = %q{2010-10-12}
   s.description = %q{
 placing some [business] logic outside of classes
   }
@@ -28,12 +28,14 @@ placing some [business] logic outside of classes
      "examples/equation.rb",
      "examples/light.rb",
      "examples/state_machine.rb",
+     "examples/state_machine_2.rb",
      "examples/traffic.rb",
      "lib/volute.rb",
      "spec/apply_spec.rb",
      "spec/filter_not_spec.rb",
      "spec/filter_spec.rb",
      "spec/filter_state_spec.rb",
+     "spec/filter_transitions_spec.rb",
      "spec/include_volute_spec.rb",
      "spec/over_spec.rb",
      "spec/spec_helper.rb",
@@ -52,6 +54,7 @@ placing some [business] logic outside of classes
      "spec/filter_not_spec.rb",
      "spec/filter_spec.rb",
      "spec/filter_state_spec.rb",
+     "spec/filter_transitions_spec.rb",
      "spec/include_volute_spec.rb",
      "spec/over_spec.rb",
      "spec/spec_helper.rb",
@@ -61,6 +64,7 @@ placing some [business] logic outside of classes
      "examples/equation.rb",
      "examples/light.rb",
      "examples/state_machine.rb",
+     "examples/state_machine_2.rb",
      "examples/traffic.rb"
   ]
 
